fix gap between input fields

--- a/common/common.scss
+++ b/common/common.scss
@@ -858,6 +858,11 @@ tr {
   margin-right: 0px;
   margin-bottom: 1.25em;
   margin-left: 0px;
+  
+  .input-group{
+    margin-bottom: 0;
+    gap: 0.5px;
+  }
 }
 
 .login-modal:not(.hidden) #login-form .input-group input {
